# OmniCCG-CLI

./: .gitignore  MANIFEST.in  README.md  config.json  pyproject.toml
src/omniccg/: __init__.py  analysis.py  cli.py  cli_operations.py  core.py  count_methods.py  executes_locally.py
