[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omniccg"
version = "0.1.0"
description = "OmniCCG - Code Clone Genealogy Tool"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Your Name", email = "your@email.com" }]
keywords = ["clone-detection", "code-analysis", "nicad", "simian"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

# Python dependencies (system dependencies are listed in the README)
dependencies = [
  "Click>=8.1",
  "GitPython>=3.1",
  "requests>=2.31"
]

[project.scripts]
# creates the 'omniccg' command on the PATH
omniccg = "omniccg.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Include tools/static files in the wheel
"omniccg" = [
  "tools/**",
  "scripts/**"
]
